-  chore(App.css): add text-align and text-decoration styles to .container class -  feat(App.jsx): add routing functionality using react-router-dom -  fix(Board.jsx): refactor checkWinner and checkDraw functions to use checkCombo helper function -  feat(Board.jsx): update handleClick function to update gameState.board instead of board state -  feat(GameVsPlayer.jsx): create component for game mode "player vs player" -  feat(MainMenu.jsx): add links for game mode selection -  feat(GameStateContext.jsx): add board state to game state context -  feat(main.jsx): wrap App component with BrowserRouter component

--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
     box-sizing: border-box;
     transition: all 250ms ease-out;
     text-transform: capitalize;
+    text-align: center;
+    text-decoration: none;
 }
 
 body {
@@ -196,7 +198,9 @@ button:hover {
 }
 
 #selectSide {
-    gap: 1rem;
+    display: grid;
+    place-items: center;
+    gap: 3rem;
 }
 
 [data-side] {
